sec.Diskussion: Ausblick und pers. Überlegungen abgeschlossen

--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -78,7 +78,13 @@ Für die Erfassung des aktuell subjektiv Belastungserleben der Eltern wurde das 
    
 
 % ---------------------------------------
-\subsection{TBD: Ausblick} \label{sec:Ausblick}
-\textit{TBD:} Neben dem Smartphone wäre auch das Tablet explizit zu erfassen. Beiden diesen Geräten wäre gut vorstellbar, dass sich das Gerät als eine Art physische Barriere zwischen der Eltern-Kind-Interaktion entpuppen würde.
+\subsection{Ausblick und persönliche Überlegungen} \label{sec:Ausblick}
+Gemäss der Hypothesenthests konnte kein Zusammenhang zwischen der Bindung, dem erlebten Stress der Eltern und der Medientätigkeit während der Betreuung gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurde, schien zu breit erfasst worden zu sein. Die Effekte scheinen, wenn sie dann vorhanden sind, viel subtiler vorhanden zu sein, als dass sie sich über die Gesamtmediennutzung abbilden lassen würden. Zudem scheint Bindung nicht mit allen Medientätigkeiten im Zusammenhang zu stehen. In dieser Studie sogar nur mit einer und zwar dem Schreiben von Textnachrichten. Kritisch zu hinterfragen ist hier sehr wohl, ob die Bindung der Eltern durch den eingesetzten Fragebogen (\acrshort{aas}) exakt erfasst wurden und ob dies generell mit einem Fragebogen überhaupt möglich ist. Wir bewegen uns immerhin im Bereich der Psychologie, wo eine Abgrenzungen nicht immer klar zu vollziehen ist. Ebenso sagen die gefundenen Effekte nichts über die Richtung des Zusammenhangs zwischen der Bindung und dem Medienverhalten aus. Geschweige denn von einem möglichen Einfluss auf die Entwicklungsaufgaben in der Eltern-Kind-Interaktion. Für zukünftige Forschung wäre es durchaus interessant, diese Interaktion im Zusammenhang mit Medien und Bindung näher zu untersuchen. Zudem ist unklar, wie das vermehrte Schreiben von Textnachrichten bei einem unsicheren Bindungsstil in Beziehung steht. Tendieren unsicher Gebundene dazu, sich vermehrt aus der Beziehung zu ihrem Kind zu nehmen indem sie sich mittels Smartphone distanzieren, oder könnte das Smartphone sogar eine Veränderung des Bindungsstils begünstigen? Dass der Beindungsstil sich über die Lebenszeit verändern kann, hat \citeA{Lewis2000} in einer Langzeitstudie untersucht. Dieser Punkt kann durch diese Arbeit nicht beantwortet werden. Vielmehr liefert diese Arbeit eine Anzahl von Indizien, welchen weiter nachgegangen werden könnte.
 
-Gemäss der Hypothesenthests konnte kein Zusammenhang zwischen der Bindung und des erlebten Stress der Eltern gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurden, scheinen ein zu breites Spektrum abzubilden, welches zu undefiniert betrachtet werden kann. Bindung scheint demzufolge nicht mit allen Medientätigkeiten im Zusammenhang zu stehen, sondern nur mit ausgewählten. Wie in diesem Fall, dem Schreiben von Textnachrichten. Dies sagt jedoch noch nichts über einen möglichen Zusammenhang zwischen dem Medienverhalten der Eltern und den Entwicklungsaufgaben in der Eltern-Kind-Interaktion der Kinder aus. Diese Interaktion wurde gänzlich ausgeklammert, scheint jedoch für zukünftige Forschung zentral zu sein. Auch sagt diese Untersuchung nichts über einen möglichen Zusammenhang zwischen der Bindung der Eltern und der Bindung der Kinder aus. Es könnte gut sein, dass gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der entwickelnden Bindung des Kindes stehen (vgl. Masterarbeit \citeA{Dietziker2018}). Wobei hier zu untersuchen wäre, in welcher Form diese Medien das Bindungsverhalten übertragen. Es scheint jedoch einen Zusammenhang zwischen der Bindung der Eltern und dem Smartphonegebrauch der Eltern während der Betreuung zu geben. Welchen Auswirkungen dies auf die Bindung der Kindern hat, wurde ansatzweise in der Arbeit von \citeA{Dietziker2018} untersucht. Doch wird es weitere Forschung in diesem Gebiet geben müssen. Die Bindung könnte dabei eine zentrale Rolle im Umgang mit dem Smartphone spielen.
+Weiter wäre zu untersuchen, in welchem Verhältnis die Bindung der Eltern über die Mediennutzung, zur Bindung der Kinder stehen. Die Medien als \enquote{Übertragungsmittel} der Bindung zum Kind betrachten. Dabei wäre zu untersuchen, ob gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der entwickelnden Bindung des Kindes stehen und in welcher Form diese Medien den Bindungsstil und das Bindungsverhalten tangieren. Aus dieser Arbeit lässt sich ein kleiner Zusammenhang zwischen dem Bindungsstil der Eltern auf deren Smartphonegrbrauch während der Betreuung herleiten. Zudem scheint es einen Zusammenhang zwischen dem Smartphonegebrauch der Eltern während der Betreuung und dem Bindungsstil der Kinder gemäss \citeA{Dietziker2018} zu geben. Daraus lassen sich leider nur Vermutungen anstellen und keine definitive Aussage herleiten. Der Bindungsstil der Eltern könnte sich über die Verwendung gewisser Medien zum Kind übertragen. Es liegt jedoch an fortführenden Untersuchungen, dies zu untersuchen und das Smartphone oder generell Medien als mögliches Übtragungsinstrument der Bindung zu betrachten. Die Bindung scheint, basierend auf diesen kürzlich gemachten Untersuchungen eine zentrale Rolle im Umgang mit dem Smartphone zu spielen.
+
+Basierend auf diesen Überlegungen könnten neue Medien zukünftig als Projektionsfläche für innere psychologische Konstrukte der Nutzer, wie der persönliche Bindungsstil, herangezogen werden. Als ein Mittel zur Sichtbarmachung des inneren psychischen Konstrukts, das durch den Umgang und den Mediengebrauch sichtbar gemacht würde. Wie zum Beispiel der Bindungsstil, der während der Betreuung der Kinder durch ein bestimmtes Verhalten sichtbar gemacht würde. Die Nutzung des Smartphones könnte dadurch um ein psychologischer Zusatznutzen erweitert werden. Durch die technisch nahezu grenzenlosen Möglichkeiten eines heutigen Gerätes, könnten sich der Psychologie neue Ufer erschliessen. Quasi als Spiegel der Seele dienen. Das Smartphone nicht als Ursache für ein gewisses Verhalten betrachten, sondern vielmehr als Ausdrucksform einer psychologischen Eigenschaft, die sichtbar gemacht werden kann. Vorstellbar, das Smartphone therapeutisch einzusetzen (\textit{engl. smartphone-based treatment}), was in diversen Studien bereits untersucht wird (z.B. Prokrastination mit Hilfe des Smartphones verringern \cite{Lukas2018}). Trotz aller Zukunfstvisionen und technischer Möglichkeiten soll dabei nicht vergessen werden, dass in dieser Studie kleine Effekte gefunden wurden. Dass sich diese für allgemeine Aussagen über Persönlichkeitseigenschaften nicht nutzen lassen ist wohl selbsterklärend. Gut möglich, dass sich psychologische Eigenschaften durch den Gebrauch von neuen Medien abbilden lassen, dass jedoch Voraussagen gemacht werden können sei hiermit in Frage gestellt. Zu vielfältig scheint die Psyche zu sein, als dass sie sich so einfach durch Technik abbilden lassen würde.  
+
+Schön wäre es, wenn die Ergebnisse aus dieser Studie zu weiterführenden Untersuchungen führen würde. Dem Autor haben sie auf alle Fälle Hinweise auf das eigene Verhalten, aber auch auf das Verhalten anderer Eltern gegeben. Die Allgegenwärtigkeit und einfache Nutzbarekit der Medien wird weiter spannende Erkenntnisse zu unserem Verhalten als Menschen liefern. Schön wäre es, diese als Chance für Entwicklung und Erkenntnis zu nutzen, die der Menschheit insgesamt dient.
+
+\newpage
