--- a/main.tex
+++ b/main.tex
@@ -22,9 +22,9 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \includepdf{content/PDF/Titel2.pdf}
 
 % Danksagung
-\section*{Danksagung}\label{sec:Danksagung}
-\input{content/000_danksagung.tex}
-\newpage
+%\section*{Danksagung}\label{sec:Danksagung}
+%\input{content/000_danksagung.tex}
+%\newpage
 
 %Abstract
 \section*{Abstract}\label{sec:Abstract}
