überartbeitung vor Lektorat

--- a/content/00_abstract.tex
+++ b/content/00_abstract.tex
@@ -1,3 +1,4 @@
-%\abstract{Your abstract here.}
-%\abstract{This abstract has to be done....}
-My abstract here...
+Text here....
+
+\textit{Schlagwörter:} TBD
+
