--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,9 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \makenoidxglossaries % use TeX to sort
 \loadglsentries{content/glossar.tex}
 
+
+\keywords{APA style, demonstration}
+
 \begin{document}
 \RaggedRight
 
