--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \loadglsentries{content/glossar.tex}
 
 
-\keywords{APA style, demonstration}
+\keywords{Bindungstheorie, Bindung, Eltern-Kind-Beziehungen, Stress, Wohlbefinden, Kommunikationsmedien, Smartphone}
 
 \begin{document}
 \RaggedRight
