Lektorat bis Kap. Ergebnisse.

--- a/main.tex
+++ b/main.tex
@@ -166,7 +166,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \newpage
 
 % Zusammengezogenen Resultate
-\section{Zusammenzug der erweiterten Hypothesen-Ergebnissen}\label{app:ZusammenzugResultate}
+\section{Zusammenzug der erweiterten Hypothesen-Ergebnisse}\label{app:ZusammenzugResultate}
 \input{content/Anhang/ZusammenzugResultate.tex}
 \newpage
 
