Literature Finished Final on the second last day

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -7,7 +7,7 @@ Im zweiten Teil dieses Kapitels soll aus theoretischer Sicht auf das Verhalten d
 
 
 \subsubsection{Die Eltern-Kind-Beziehung}\label{sec:ElternKindBeziehung}
-Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung bezeichnet, wurde der Begriff aufgrund wissenschaftlicher Ergebnisse zur Eltern-Kind-Beziehung erweitert, da auch ein konstant anwesender, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppen aufbauen. Dabei muss die Gelegenheit zu regelmässigem Austausch gegeben sein. Durch die Anwesenheit und den Zuspruch der vertraut gewordenen Menschen werden die innere Sicherheit, die Geborgenheit und die Angstfreiheit beim Kind gestärkt. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmalen unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern beziehen. Strukturmerkmale hingegen beziehen sich oft auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kindern und werden in dieser Arbeit nicht einbezogen. Die Qualität der Beziehung kann unter der systemischen Perspektive betrachtet werden, in welcher der Familienprozess als das Ergebnis wechselseitiger Beeinflussung aller Familienmitglieder verstanden wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Des Weiteren kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung den Erziehungsstilen liegt. 
+Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{LexikonDerBiologie1999}. Ursprünglich als Mutter-Kind-Beziehung bezeichnet, wurde der Begriff aufgrund wissenschaftlicher Ergebnisse zur Eltern-Kind-Beziehung erweitert, da auch ein konstant anwesender, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppen aufbauen. Dabei muss die Gelegenheit zu regelmässigem Austausch gegeben sein. Durch die Anwesenheit und den Zuspruch der vertraut gewordenen Menschen werden die innere Sicherheit, die Geborgenheit und die Angstfreiheit beim Kind gestärkt. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{LexikonDerBiologie1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmalen unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern beziehen. Strukturmerkmale hingegen beziehen sich oft auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kindern und werden in dieser Arbeit nicht einbezogen. Die Qualität der Beziehung kann unter der systemischen Perspektive betrachtet werden, in welcher der Familienprozess als das Ergebnis wechselseitiger Beeinflussung aller Familienmitglieder verstanden wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Des Weiteren kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung den Erziehungsstilen liegt. 
 
 Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung von einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gilt als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist. Vielmehr stehen die Eltern und die Kinder in einer reziproken sozialisatorischen Beziehung zueinander. \citeA{Hofer1992} nennen wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Synchronizität der Interaktion, Persönlichkeit der Eltern, Beziehungsqualität der Partner sowie die affektive und kognitive Ausstattung des Kindes selbst. 
 
